--- a/TomKinect/MainWindow.xaml
+++ b/TomKinect/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <Image Name="image"></Image> 
+        <Image Name="image"></Image>
+        <Canvas Name="canvas"></Canvas>
     </Grid>
 </Window>
